# SEArgs

./: .gitignore  CMakeLists.txt  README.md
example/: eg.c  test.c
headers/: helpers.h  macros.h  seargs.h
include/: macros.h  seargs.h
src/: seargs.c  seargs.h  simpleargs.h  test.c
